K8s/block-chain-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: block-chain
  namespace: projet-backend
  labels:
    app: block-chain
spec:
  replicas: 1
  selector:
    matchLabels:
      app: block-chain
  template:
    metadata:
      labels:
        app: block-chain
    spec:
      serviceAccountName: deployer
      containers:
        - name: block-chain
          image: khazrisalah2004/blockchain:3
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 40
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 15
