K8s/blockchainlayer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blockchain-layer
  namespace: projet-backend
  labels:
    app: blockchain-layer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blockchain-layer
  template:
    metadata:
      labels:
        app: blockchain-layer
    spec:
      serviceAccountName: deployer
      containers:
        - name: blockchain-layer
          image: khazrisalah2004/blockchain_layer:2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "1000m"
              memory: "1Gi"
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 40
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 15
