K8s/rent-chain-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rent-chain
  namespace: projet-frontend
  labels:
    app: rent-chain
spec:
  replicas: 2
  selector:
    matchLabels:
      app: rent-chain
  template:
    metadata:
      labels:
        app: rent-chain
    spec:
      containers:
        - name: rent-chain
          image: khazrisalah2004/rentchain:3
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
