K8s/pg-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: projet-backend
  labels:
    app: postgres
spec:
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
      name: postgres
  selector:
    app: postgres
