K8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  namespace: projet-backend
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: "/$1"
spec:
  tls:
    - hosts:
        - projet.local
      secretName: tls-secret
  rules:
    - host: projet.local
      http:
        paths:
          - path: /user
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 80
          - path: /property
            pathType: Prefix
            backend:
              service:
                name: property-service
                port:
                  number: 80
          - path: /booking
            pathType: Prefix
            backend:
              service:
                name: booking-service
                port:
                  number: 80
          - path: /notification
            pathType: Prefix
            backend:
              service:
                name: notification-service
                port:
                  number: 80
          - path: /blockchain
            pathType: Prefix
            backend:
              service:
                name: blockchain-layer
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gateway
                port:
                  number: 80
